--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html, body, #root{
 }
 
 body{
-  background-color: #EFEFEF;
+  background-color: #949494;
   font-size: 14px;
   font-family: "Inter Tight", sans-serif;
   text-decoration: none;
