--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -9,74 +9,114 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
 }
 
 .modal .modal-container {
   position: fixed;
-  max-width: 600px;
+  width: 90%;
+  max-width: 1000px;
   background-color: #FFF;
+  margin-left: 250px;
 }
 
 .description {
   text-align: start;
-  padding: 4em 2em;
-}
-
-.close {
-  background-color: #f31303;
-  border: 0;
-  border-radius: 5px;
-  position: absolute;
-  top: 15px;
-  right: 15px;
+  padding: 2em 2em;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 4px;
-  color: #FFF;
-  transition: all ease-in 0.3s;
-}
-
-.close:hover{
-  background-color: #af2000;
+  flex-wrap: wrap;
 }
 
 .modal h2 {
+  display: flex;
+  align-items: center;
   margin-bottom: 1.2em;
+  width: 100%;
+  height: 40px;
+  color: #616161;
+  text-transform: uppercase;
+  font-weight: 400;
 }
 
 .row {
+  width: 47%;
+  margin-left: 5px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: start;
   gap: 3px;
   padding: 10px;
   margin-bottom: 1em;
-  border: 1px solid #393636;
   border-radius: 5px;
 }
 
-.modal span {
-  font-weight: bold;
-  font-size: 1.1em;
-  display: flex;
-  align-items: center;
+.row label{
+  color:#616161
 }
 
-.modal span i {
-  font-weight: 400;
-  padding: 2px 8px;
-}
-
-.modal .icon-span {
-  text-decoration: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  margin-left: 5px;
-  border: 0.5px solid transparent;
+.row input{
+  margin-top: 5px;
+  width: 90%;
+  padding: 10px;
+  border: 1px solid #393636;
   border-radius: 3px;
-  color: #e91d1d;
+}
+
+.row input:disabled{
+  background-color: #e6e6e6;
+  border: 1px solid #b3b3b3;
+}
+
+.modal-actions{
+  margin-top: 20px;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+}
+
+.option-del{
+  width: 48%;
+  height: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.option-del button{
+  width: 80px;
+  height: 27px;
+  text-transform: uppercase;
+  font-size: 12px;
+  background-color: #e0e0e0;
+  border: none;
+  margin-left: 20px;
+  color: #616161;
+  transition: all ease-in 0.3s;
+}
+
+.option-edit{
+  width: 48%;
+  height: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
+.option-edit button{
+  width: 80px;
+  height: 27px;
+  text-transform: uppercase;
+  font-size: 12px;
+  background-color: #e0e0e0;
+  color: #616161;
+  border: none;
+  margin-left: 20px;
+  transition: all ease-in 0.3s;
+}
+
+.option-edit button:hover, .option-del button:hover{
+  background-color: rgb(95, 95, 95);
+  color: #e6e6e6;
 }
