--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -5,17 +5,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(226, 226, 226);
+    background-color: rgb(255, 255, 255);
 }
 
 /* DIV PAI LOGIN */
 .login-painel {
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    max-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(255, 255, 255);
 }
 
 /* painel principal esquerdo */
@@ -58,11 +59,10 @@
 
 /* PAINEL DE LOGIN */
 .box-form-login {
-    background-color: rgb(173, 173, 173);
+    background-color: rgb(255, 255, 255);
     width: 50%;
     height: 96%;
     max-height: 100vh;
-    overflow:hidden;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -71,54 +71,63 @@
 }
 
 .form-painel {
-    background-color: rgb(243, 240, 240);
-    width: 100%;
+    background-color: rgb(255, 255, 255);
+    width: 90%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .form-box {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(221, 221, 221);
     width: 100%;
-    height: 100%;
+    height: 95%;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.form-box form{
-    background-color: rgb(241, 241, 241);
-    width: 92%;
-    height: 92%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 .logo-painel{
-    width: 300px;
-    padding: 20PX;
+    width: 220px;
     background-color: rgb(255, 255, 255);
     border-radius: 25PX;
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    align-items: center;
+    height: 20%;
+    margin-top: 4em;
+
 }
 
-.login-painel img{
-    width: 180px;
+.logo-painel img{
+    width: 50px;
+    height: 50px;
+}
+
+.form-box form{
+    margin-top: 35px;
+    width: 92%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 10px;
+    gap: 30px;
 }
 
 .login-painel label{
-    margin-top: 5em;
     font-size: 20px;
     color: rgb(158, 158, 158);
     font-weight: 400;
+    
 }
 
 .login-painel input{
-    margin-top: 30px;
     font-size: 18px;
     color: rgb(129, 129, 129);
     width: 70%;
@@ -135,7 +144,6 @@
     width: 100px;
     height: 50px;
     border-radius: 5px;
-    margin-top: 45px;
     border: none;
     background-color: rgb(255, 255, 255);
     color: rgb(129, 129, 129);
@@ -159,10 +167,10 @@
 }
 
 .actions-login a{
-    margin: 0px 30px 50px 30px;
+    margin: 40px 25px;
     text-decoration: none;
     cursor: pointer;
-    color: rgb(199, 199, 199);
+    color: rgb(129, 129, 129);
     border-bottom: 1px solid transparent;
     transition: all ease-in 0.2s;
 }
